--- a/tokens/variables.css
+++ b/tokens/variables.css
@@ -102,7 +102,7 @@
   --figma-color-text-button-secondary: #175CD3;
   --figma-color-text-sidebar: #344054;
   --figma-color-text-disable: #98A2B3;
-  --figma-color-background-primary: #FFDD00;
+  --figma-color-background-primary: #6CE9A6;
   --figma-color-background-base-light: #FCFCFD;
   --figma-color-background-base-grey: #F2F4F7;
   --figma-color-background-base-dark: #101828;
