--- a/tokens/variables.css
+++ b/tokens/variables.css
@@ -123,3 +123,78 @@
   --figma-font-line-height-8: 72;
   --figma-font-line-height-9: 60;
   --figma-font-line-height-10: 44;
+  --figma-size-font-heading-1: 30rem;
+  --figma-size-font-heading-2: 24rem;
+  --figma-size-font-heading-3: 20rem;
+  --figma-size-font-heading-4: 18rem;
+  --figma-size-font-heading-5: 16rem;
+  --figma-size-font-body-1: 16rem;
+  --figma-size-font-body-2: 14rem;
+  --figma-size-font-subtitle-1: 16rem;
+  --figma-size-font-subtitle-2: 14rem;
+  --figma-size-font-button-1: 12rem;
+  --figma-size-font-button-2: 14rem;
+  --figma-size-font-label: 12rem;
+  --figma-size-font-caption: 12rem;
+  --figma-size-button-height: 40rem;
+  --figma-size-button-radius: 100rem;
+  --figma-size-button-gap: 8rem;
+  --figma-size-button-padding-top-bottom: 8rem;
+  --figma-size-button-padding-right-left: 24rem;
+  --figma-size-radius-extra-small: 4rem;
+  --figma-size-radius-small: 8rem;
+  --figma-size-radius-medium: 12rem;
+  --figma-size-radius-large: 16rem;
+  --figma-size-radius-extra-large: 28rem;
+  --figma-size-radius-full: 100rem;
+  --figma-size-field-radius: 8rem;
+  --figma-size-field-gap: 8rem;
+  --figma-size-field-padding-top-bottom: 8rem;
+  --figma-size-field-padding-right-left: 24rem;
+  --figma-size-chip-radius: 8rem;
+  --figma-size-card-radius: 12rem;
+  --figma-size-dialog-radius: 4rem;
+  --figma-size-checkbox-radius: 4rem;
+  --figma-size-border-dialog: 1rem;
+  --figma-size-space-4: 4rem;
+  --figma-size-space-8: 8rem;
+  --figma-size-space-12: 12rem;
+  --figma-size-space-16: 16rem;
+  --figma-size-space-20: 20rem;
+  --figma-size-space-24: 24rem;
+  --figma-size-space-32: 32rem;
+  --figma-color-text-normal: #344054;
+  --figma-color-text-white: #fcfcfd;
+  --figma-color-text-link: #2e90fa;
+  --figma-color-text-success: #027a48;
+  --figma-color-text-error: #b42318;
+  --figma-color-text-button-primary: #344054;
+  --figma-color-text-button-secondary: #175cd3;
+  --figma-color-text-sidebar: #344054;
+  --figma-color-text-disable: #98a2b3;
+  --figma-color-background-primary: #ffdd00;
+  --figma-color-background-base-light: #fcfcfd;
+  --figma-color-background-base-grey: #f2f4f7;
+  --figma-color-background-base-dark: #101828;
+  --figma-color-background-error: #FEE4E2;
+  --figma-color-background-link: #D1E9FF;
+  --figma-color-background-success: #D1FADF;
+  --figma-color-background-disable: #F2F4F7;
+  --figma-color-background-button-primary-active: #6CE9A6;
+  --figma-color-background-button-primary-hover: #FFEB74;
+  --figma-color-background-button-primary-selected: #F2B705;
+  --figma-color-background-button-error-active: #F04438;
+  --figma-color-background-button-error-hover: #FDA29B;
+  --figma-color-background-button-error-selected: #D92D20;
+  --figma-color-background-button-secondary-active: #FCFCFD;
+  --figma-color-background-button-secondary-hover: #F5FAFF;
+  --figma-color-background-button-secondary-selected: #D1E9FF;
+  --figma-color-shadow: #101828;
+  --figma-color-border-base: #98a2b3;
+  --figma-color-border-error: #f97066;
+  --figma-color-border-link: #53b1fd;
+  --figma-color-border-success: #32d583;
+  --figma-color-border-disable: #98a2b3;
+  --figma-color-border-button-link: #b2ddff;
+  --figma-color-border-button-error: #f04438;
+}
