chore: style-dictionary output

--- a/tokens/variables.css
+++ b/tokens/variables.css
@@ -172,7 +172,7 @@
   --figma-color-text-button-secondary: #175cd3;
   --figma-color-text-sidebar: #344054;
   --figma-color-text-disable: #98a2b3;
-  --figma-color-background-primary: #ffdd00;
+  --figma-color-background-primary: #6ce9a6;
   --figma-color-background-base-light: #fcfcfd;
   --figma-color-background-base-grey: #f2f4f7;
   --figma-color-background-base-dark: #101828;
