chore: style-dictionary output

--- a/tokens/variables.css
+++ b/tokens/variables.css
@@ -163,6 +163,7 @@
   --figma-size-space-20: 20px;
   --figma-size-space-24: 24px;
   --figma-size-space-32: 32px;
+  --figma-size-line-height-button1: 24px;
   --figma-color-text-normal: #344054;
   --figma-color-text-white: #fcfcfd;
   --figma-color-text-link: #2e90fa;
