chore: style-dictionary output

--- a/tokens/variables.css
+++ b/tokens/variables.css
@@ -163,7 +163,19 @@
   --figma-size-space-20: 20px;
   --figma-size-space-24: 24px;
   --figma-size-space-32: 32px;
+  --figma-size-line-height-h1: 38px;
+  --figma-size-line-height-h2: 32px;
+  --figma-size-line-height-h3: 30px;
+  --figma-size-line-height-h4: 28px;
+  --figma-size-line-height-h5: 24px;
+  --figma-size-line-height-subtitle1: 24px;
+  --figma-size-line-height-subtitle2: 20px;
+  --figma-size-line-height-body1: 24px;
+  --figma-size-line-height-body2: 20px;
   --figma-size-line-height-button1: 24px;
+  --figma-size-line-height-button2: 20px;
+  --figma-size-line-height-label: 18px;
+  --figma-size-line-height-caption: 18px;
   --figma-color-text-normal: #344054;
   --figma-color-text-white: #fcfcfd;
   --figma-color-text-link: #2e90fa;
