chore: style-dictionary output

--- a/tokens/variables.css
+++ b/tokens/variables.css
@@ -193,7 +193,7 @@
   --figma-color-background-link: #d1e9ff;
   --figma-color-background-success: #d1fadf;
   --figma-color-background-disable: #f2f4f7;
-  --figma-color-background-button-primary-active: #ffdd00;
+  --figma-color-background-button-primary-active: #6ce9a6;
   --figma-color-background-button-primary-hover: #ffeb74;
   --figma-color-background-button-primary-selected: #f2b705;
   --figma-color-background-button-error-active: #f04438;
